# gql-safeguard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  debug_parsing.rs  goal.md  install.js  json  package-lock.json  package.json
.changeset/: afraid-jobs-hear.md  all-areas-lead.md  (+14 more)
lib/: Cargo.toml
lib/src/: file_finder.rs  lib.rs  registry.rs  registry_to_graph.rs  snapshot.rs  tree_formatter.rs  validate.rs  validate_registry.rs
lib/src/analysis/: mod.rs  reporter.rs  validator.rs
lib/src/extraction/: graphql_parser.rs  mod.rs  registry.rs  registry_to_graph.rs
lib/src/extraction/snapshots/: gql_safeguard_lib__extraction__graphql_parser__tests__parse_edge_case_fixtures_to_ast.snap  gql_safeguard_lib__extraction__graphql_parser__tests__parse_invalid_fixtures_to_ast.snap  gql_safeguard_lib__extraction__graphql_parser__tests__parse_valid_fixtures_to_ast.snap  (+11 more)
lib/src/graph/: builder.rs  mod.rs  traversal.rs
lib/src/parser/: ast_builder.rs  directive_parser.rs  mod.rs
lib/src/parsers/: graphql_parser.rs  mod.rs  typescript_parser.rs
lib/src/registry/: fragment_registry.rs  mod.rs  query_registry.rs
lib/src/scanner/: extractor.rs  file_finder.rs  mod.rs
lib/src/snapshots/: gql_safeguard_lib__registry__tests__registry_from_all_fixtures.snap  gql_safeguard_lib__registry__tests__registry_from_edge_case_fixtures.snap  gql_safeguard_lib__registry__tests__registry_from_invalid_fixtures.snap  gql_safeguard_lib__registry__tests__registry_from_valid_fixtures.snap  gql_safeguard_lib__registry_to_graph__tests__dependency_graph_from_edge_case_fixtures.snap  gql_safeguard_lib__registry_to_graph__tests__dependency_graph_from_invalid_fixtures.snap  gql_safeguard_lib__registry_to_graph__tests__dependency_graph_from_valid_fixtures.snap  gql_safeguard_lib__snapshot__tests__edge_cases_error.snap  gql_safeguard_lib__snapshot__tests__invalid_fixtures.snap  gql_safeguard_lib__snapshot__tests__simple_snapshot.snap  gql_safeguard_lib__snapshot__tests__valid_fixtures.snap  gql_safeguard_lib__validate__tests__validate_edge_cases.snap  gql_safeguard_lib__validate__tests__validate_invalid_fixtures.snap  gql_safeguard_lib__validate_registry__tests__json_validation_result_invalid_fixtures.snap  gql_safeguard_lib__validate_registry__tests__json_validation_result_valid_fixtures.snap  gql_safeguard_lib__validate_registry__tests__validate_registry_edge_cases.snap  gql_safeguard_lib__validate_registry__tests__validate_registry_invalid_fixtures.snap
lib/src/types/: directive.rs  graphql.rs  mod.rs  violation.rs
(+37 files in other folders)
