[workspace]
members = ["cli", "lib"]
resolver = "2"

[workspace.dependencies]
globset = "0.4.10"
swc_core = { version = "0.90", features = ["ecma_parser", "ecma_ast", "ecma_visit"] }
swc_ecma_parser = "0.144"
swc_ecma_ast = "0.110"
graphql-parser = "0.4"
dashmap = "5.5"
rustc-hash = "1.1"
rayon = "1.10.0"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
insta = "1.40"
ignore = "0.4.21"