[workspace]
members = ["cli", "lib"]
resolver = "2"

[workspace.dependencies]
globset = "0.4.10"
swc_core = { version = "33", features = ["ecma_parser", "ecma_ast", "ecma_visit", "common"] }
graphql-parser = "0.4"
dashmap = "6.1.0"
rustc-hash = "2.1.1"
rayon = "1.10.0"
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
insta = "1.40"
ignore = "0.4.21"