[package]
name = "gql-safeguard-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
globset = { workspace = true }
swc_core = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_ast = { workspace = true }
graphql-parser = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }