[package]
name = "gql-safeguard-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
globset = { workspace = true }
swc_core = { workspace = true }
graphql-parser = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.140"
ignore = { workspace = true }

[dev-dependencies]
insta = { workspace = true }